<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.texnologia_logismikou</groupId>
    <artifactId>Cinematrix</artifactId>
    <name>Cinematrix</name>
    <version>0.7.1</version>
    <packaging>jar</packaging>
        
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>17</maven.compiler.release>
        <javafx.version>21</javafx.version>
        <javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
        <AppName>${project.name}</AppName>
        <AppVersion>${project.version}</AppVersion>
        <TeamNo>9th</TeamNo>
        <RepoLink>https://github.com/graphXDoses/Cinematrix</RepoLink>
    </properties>
    
    <dependencyManagement>
  	<dependencies>
    		<dependency>
      			<groupId>com.google.cloud</groupId>
      			<artifactId>libraries-bom</artifactId>
      			<version>26.40.0</version>
      			<type>pom</type>
      			<scope>import</scope>
    		</dependency>
  		</dependencies>
	</dependencyManagement>
    
    <dependencies>
		
		<dependency>
		    <groupId>org.junit.jupiter</groupId>
		    <artifactId>junit-jupiter-api</artifactId>
		    <version>5.4.0</version>
		    <scope>test</scope>
		</dependency>

		<dependency>
		    <groupId>org.junit.jupiter</groupId>
		    <artifactId>junit-jupiter-engine</artifactId>
		    <version>5.4.0</version>
		    <scope>test</scope>
		</dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-web</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        
        <dependency>
		    <groupId>org.controlsfx</groupId>
		    <artifactId>controlsfx</artifactId>
		    <version>9.0.0</version>
		</dependency>
        
        <dependency>
		    <groupId>org.controlsfx</groupId>
		    <artifactId>controlsfx</artifactId>
		    <version>9.0.0</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/com.google.cloud/google-cloud-core -->
		<dependency>
		    <groupId>com.google.cloud</groupId>
		    <artifactId>google-cloud-core</artifactId>
		</dependency>
		
		<dependency>
    		<groupId>com.google.cloud</groupId>
    		<artifactId>google-cloud-storage</artifactId>
  		</dependency>
  		<dependency>
    		<groupId>com.google.cloud</groupId>
    		<artifactId>google-cloud-storage-control</artifactId>
  		</dependency>
		
		<!-- TESTING THE REST API METHOD-->
		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
		<dependency>
		    <groupId>com.google.code.gson</groupId>
		    <artifactId>gson</artifactId>
		</dependency>

    </dependencies>
    <build>
		
		<testResources>
            <testResource>
                <directory>src/test/java</directory>
            </testResource>
        </testResources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
            </plugin>
            <plugin>
			    <groupId>org.apache.maven.plugins</groupId>
			    <artifactId>maven-surefire-plugin</artifactId>
			    <version>3.2.5</version>
			</plugin>
			
			<plugin>
			    <groupId>org.codehaus.mojo</groupId> 
			    <artifactId>properties-maven-plugin</artifactId> 
			    <version>1.0.0</version> 
			    <executions> 
			        <execution> 
			            <phase>generate-resources</phase> 
			            <goals> 
			                <goal>write-project-properties</goal> 
			            </goals> 
			            <configuration> 
			                <outputFile>${project.build.outputDirectory}/properties-from-pom.properties</outputFile> 
			            </configuration> 
			        </execution> 
			    </executions> 
			</plugin>
			
			<plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <configuration>
                    <outputDirectory>${project.build.directory}/lib</outputDirectory>
                    <excludeTransitive>false</excludeTransitive>
                    <stripVersion>false</stripVersion>
                </configuration>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
			
			<plugin>
			    <groupId>org.apache.maven.plugins</groupId>
			    <artifactId>maven-jar-plugin</artifactId>
			    <version>3.4.1</version>
			    <configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<mainClass>${project.groupId}.${project.name}.EntryPoint</mainClass>
							<classpathPrefix>lib/</classpathPrefix>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>${javafx.maven.plugin.version}</version>
                <executions>
					<execution>
						<!-- Default configuration for running with: mvn clean javafx:run -->
                        <id>default-cli</id>
                        <configuration>
                            <mainClass>${project.name}/${project.groupId}.${project.name}.EntryPoint</mainClass>
                            <launcher>app</launcher>
                            <jlinkZipName>app</jlinkZipName>
                            <jlinkImageName>app</jlinkImageName>
                            <noManPages>true</noManPages>
                            <stripDebug>true</stripDebug>
                            <noHeaderFiles>true</noHeaderFiles>
                        </configuration>
					</execution>
				</executions>
            </plugin>
        </plugins>
    </build>
</project>
